# aws-secrets

./: AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: ISSUE_TEMPLATE.md
.github/workflows/: publish.yml  test.yml
examples/: README.md  demo.rs  params_show_secure_string.rs  params_show_string.rs  params_show_string_list.rs  sm_set_tag.rs  sm_show_secret.rs
examples/utils/: env.rs  mod.rs  types.rs
src/: errors.rs  lib.rs  params.rs  secretsmanager.rs  types.rs
