[package]
name = "aws-secrets"
version = "0.1.0"
authors = ["Ritvik Nag <rv.kvetch@gmail.com>"]
description = "Retrieve AWS secrets and interact with Secrets Manager and SSM Parameter Store"
documentation = "https://docs.rs/aws-secrets"
repository = "https://github.com/rnag/aws-secrets"
readme = "README.md"
keywords = [
    "aws-secrets",
    "aws-sdk-rust",
    "aws-secrets-manager",
    "aws-parameter-store",
    "aws",
]
categories = [
    # "api-bindings"
]
license = "MIT"
edition = "2021"
exclude = [
    # (optional) list any files we don't want to publish to crates.io
    # for example, assume the below is a folder which contains large `mp4` files:
    #   "examples/assets"
]

# See here for more info: https://blog.rust-lang.org/2020/03/15/docs-rs-opt-into-fewer-targets.html

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
aws-config = "0.47.0"
thiserror = "^1.0"

# Optional

## feature: `sm`
aws-sdk-secretsmanager = { version = "0.17.0", optional = true }
serde = { version = "^1.0", default-features = false, optional = true }
serde_json = { version = "^1.0", optional = true }

## feature: `params`
aws-sdk-ssm = { version = "0.17.0", optional = true }

[dev-dependencies]
structopt = "^0.3"
serde = { version = "^1.0", features = ["derive"] }
# version_sync: to ensure versions in `Cargo.toml` and `README.md` are in sync
version-sync = "0.9.4"
# cargo-bump: to bump package version and tag a commit at the same time.
# actually, the docs recommend installing this globally:
#   $ git clone https://github.com/rnag/cargo-bump && cd cargo-bump && cargo install --path . && cd .. && rm -rf cargo-bump
# logging utilities
tracing = "^0.1"
sensible-env-logger = { version = "^0.3", features = ["local-time"] }
# tokio: for `async` support
tokio = { version = "^1.0", features = ["macros", "rt-multi-thread"] }
# Some useful libraries - uncomment if needed :-)
# tabled = "0.4.2"
# indoc = "1.0.4"
# criterion = "0.3.5"

### FEATURES #################################################################

[features]
# enable all features
all = ["params", "sm"]
# for AWS SSM Parameter Store
params = ["aws-sdk-ssm"]
# for AWS Secrets Manager
sm = ["aws-sdk-secretsmanager", "serde", "serde_json"]

[[example]]
name = "demo"
required-features = ["all"]

[[example]]
name = "params_show_secure_string"
required-features = ["params"]

[[example]]
name = "params_show_string"
required-features = ["params"]

[[example]]
name = "params_show_string_list"
required-features = ["params"]

[[example]]
name = "sm_set_tag"
required-features = ["sm"]

[[example]]
name = "sm_show_secret"
required-features = ["sm"]
